--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ td:last-child, th:last-child {
 th {
     border-top: 1px solid rgba(0,0,0,0.1);
     border-right: 1px solid rgba(0,0,0,0.1);
-    background-color: #D5A1A3;
+    background-color: #E9CCC4;
     color: #fff;
     text-shadow: 0px -1px 0px rgba(0,0,0,0.2);
     font-weight: normal;
@@ -95,11 +95,11 @@ td:nth-child(even)>span {
 }
 td:last-child>span,
 td:nth-child(6)>span {
-    color: #D5A1A3;
+    color: #E9CCC4;
 }
 td.avui>span {
     font-weight: bold;
-    background-color: #D5A1A3;
+    background-color: #E9CCC4;
     color: #fff;
     border: 2px solid rgba(0,0,0,0.1);
 }
