--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <style>
         body {
-    font-family: 'Arial', sans-serif;
+    font-family: 'sans serif', sans-serif;
     background-color: #fff;
 }
 
